--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,117 +14,202 @@ body {
   margin: 0px auto;
 }
 
-
 /* header */
-.menuHB{
-    display: none;
+.menuHB {
+  display: none;
 }
-.logo{
-    display: flex;
-    margin-top: 52px;
+.logo {
+  display: flex;
+  margin-top: 52px;
 }
-.headMenu{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 49px;
+.headMenu {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 49px;
 }
-.menu ul li{
-    list-style: none;
-    margin: 0px 20px;
+.menu ul li {
+  list-style: none;
+  margin: 0px 20px;
 }
-.menu ul li a{
-    text-decoration: none;
+.menu ul li a {
+  text-decoration: none;
 }
-.menu ul{
-    display: flex;
+.menu ul {
+  display: flex;
 }
-.menu{
-    margin-top: 53px;
+.menu {
+  margin-top: 53px;
 }
-.logo h1{
-    color: #131318;
-    font-size: 2.25rem;
-    font-weight: 800;
-    padding-left: 16.63px;
+.logo h1 {
+  color: #131318;
+  font-size: 2.25rem;
+  font-weight: 800;
+  padding-left: 16.63px;
 }
-.logo h1 span{
-    color: #FF5400;
-    font-size: 2.25rem;
-    font-weight: 800;
+.logo h1 span {
+  color: #ff5400;
+  font-size: 2.25rem;
+  font-weight: 800;
 }
-
-
 
 /* section: explore-travel */
-.explore{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
-    height: 500px;
+.explore {
+  height: 121.95vh;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+      180deg,
+      rgba(19, 19, 24, 0.8) 0%,
+      rgba(19, 19, 24, 0) 100%
+    ),
+    url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
-
+.explore h1 {
+  color: #fff;
+  font-size: 4rem;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+.explore p {
+  color: #fff;
+  font-weight: 400;
+  font-size: 1rem;
+  width: 676px;
+  text-align: center;
+  margin-bottom: 48px;
+}
+.find {
+  display: inline-flex;
+  padding: 16px;
+  align-items: flex-start;
+  gap: 24px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+}
+.find input {
+  border: none;
+  width: 174px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  color: rgba(19, 19, 24, 0.5);
+  text-align: center;
+  font-family: Mulish;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.find select {
+  border: none;
+  width: 174px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #fff;
+  color: rgba(19, 19, 24, 0.5);
+  text-align: center;
+  font-family: Mulish;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.find button {
+  border: none;
+  width: 174px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #ff5400;
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 1rem;
+  font-weight: 700;
+}
 
 
 
 /* small device */
-@media screen and (max-width: 576px){
-    /* header */
-    .menu{
-        display: none;
-    }
-    .menuHB{
-        display: block;
-        margin-top: 19.2px;
-        height: 33.516px;
+@media screen and (max-width: 576px) {
+  /* header */
+  .menu {
+    display: none;
+  }
+  .menuHB {
+    display: block;
+    margin-top: 19.2px;
+    height: 33.516px;
+  }
+  .listM {
+    display: none;
+  }
+  .headMenu {
+    margin-top: 19.2px;
+  }
+  .container {
+    width: 90%;
+    margin: 0px auto;
+  }
+  .logo {
+    height: 33.516px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 19.2px;
+  }
+  .logo img {
+    height: 100%;
+  }
+  .logo h1 {
+    font-size: 1.346rem;
+    padding-left: 9.93px;
+  }
+  .logo h1 span {
+    font-size: 1.346rem;
+  }
+  .listM ul li {
+    list-style: none;
+    margin: 0px 20px;
+    border: 2px solid black;
+    margin: 2px;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: #ff5400;
+  }
+  .listM ul li a {
+    text-decoration: none;
+    color: white;
+  }
+  .menuHB img:hover + .listM {
+    display: block;
+  }
+  .menuHB {
+    display: flex;
+    justify-content: flex-end;
+  }
 
-    }
-    .listM{
-        display: none;
-    }
-    .headMenu{
-        margin-top: 19.2px;
-    }
-    .container{
-        width: 90%;
-        margin: 0px auto;
-    }
-    .logo{
-        height: 33.516px;
-        display: flex;
-        justify-content: space-between;
-        margin-top: 19.2px;
-    }
-    .logo img{
-        height: 100%;
-    }
-    .logo h1
-    {
-        font-size: 1.346rem;
-        padding-left: 9.93px;
-    }
-    .logo h1 span{
-        font-size: 1.346rem;
-    }
-    .listM ul li{
-        list-style: none;
-        margin: 0px 20px;
-        border: 2px solid black;
-        margin: 2px;
-        border-radius: 5px;
-        padding: 2px;
-        background-color: #FF5400;
-    }
-    .listM ul li a{
-        text-decoration: none;
-        color: white;
-    }
-    .menuHB img:hover + .listM{
-        display: block;
-    }
-    .menuHB{
-        display: flex;
-        justify-content: flex-end;
-    }
+
+  /* section: explore-travel */
+  .find{
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+  }
+  .explore{
+    width: 518.4px;
+  }
+  .explore h1{
+    font-size: 1.375rem;
+    margin-bottom: 8px;
+  }
+  .explore p{
+    font-size: 0.875rem;
+    margin-bottom: 32px;
+    width: 304px;
+  }
 }
