--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,9 +67,9 @@ body {
     ),
     url("../Images/Group\ 13\ \(1\)\ \(1\).png");
   background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
 }
 .explore h1 {
   color: #fff;
@@ -133,8 +133,6 @@ body {
   font-weight: 700;
 }
 
-
-
 /* small device */
 @media screen and (max-width: 576px) {
   /* header */
@@ -193,23 +191,26 @@ body {
     justify-content: flex-end;
   }
 
-
   /* section: explore-travel */
-  .find{
+  .find {
     display: flex;
     flex-direction: column;
     padding: 16px;
   }
-  .explore{
+  /* .explore{
     width: 518.4px;
-  }
-  .explore h1{
+  } */
+  .explore h1 {
     font-size: 1.375rem;
     margin-bottom: 8px;
   }
-  .explore p{
+  .explore p {
     font-size: 0.875rem;
     margin-bottom: 32px;
     width: 304px;
+  }
+  .find input,.find select,.find button {
+    width: 255px;
+    height: 52px;
   }
 }
