--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,9 +197,9 @@ body {
     flex-direction: column;
     padding: 16px;
   }
-  /* .explore{
-    width: 518.4px;
-  } */
+  .explore{
+    height: 483px;
+  }
   .explore h1 {
     font-size: 1.375rem;
     margin-bottom: 8px;
