--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,20 @@ body {
   max-width: 1440px;
   margin: 0px auto;
 }
+.find button,
+.popular-text button {
+  border: none;
+  width: 174px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #ff5400;
+  color: #fff;
+  text-align: center;
+  font-family: Mulish;
+  font-size: 1rem;
+  font-weight: 700;
+}
 
 /* header */
 .menuHB {
@@ -70,6 +84,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  margin-bottom: 100px;
 }
 .explore h1 {
   color: #fff;
@@ -119,18 +134,47 @@ body {
   font-size: 1rem;
   font-weight: 400;
 }
-.find button {
-  border: none;
-  width: 174px;
-  height: 52px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  background: #ff5400;
-  color: #fff;
-  text-align: center;
-  font-family: Mulish;
+
+/* section: popular-tour */
+.popular-text h1 {
+  color: #131318;
+  font-size: 2.5rem;
+  font-weight: 800;
+}
+.popular-text p{
+    margin: 24px auto;
+}
+.popular-text ul li{
+    margin: 16px auto;
+}
+.popular-text p,
+.popular-text ul li {
+  color: rgba(19, 19, 24, 0.7);
   font-size: 1rem;
-  font-weight: 700;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+.popular-text ul {
+  padding-left: 20px;
+}
+.popular-img {
+    height: 550px;
+}
+.popular-img img {
+  width: 100%;
+}
+.popular-text {
+  width: 577px;
+}
+.popular {
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: space-between;
+  align-items: center; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 /* small device */
@@ -197,7 +241,7 @@ body {
     flex-direction: column;
     padding: 16px;
   }
-  .explore{
+  .explore {
     height: 483px;
   }
   .explore h1 {
@@ -209,8 +253,44 @@ body {
     margin-bottom: 32px;
     width: 304px;
   }
-  .find input,.find select,.find button {
+  .find input,
+  .find select,
+  .find button {
     width: 255px;
     height: 52px;
+  }
+
+
+
+
+  /* section: popular-tour */
+  .popular{
+    display: flex;
+    flex-direction: column;
+  }
+  .popular-text h1 {
+    color: #131318;
+    font-size: 1.25rem;
+    font-weight: 800;
+  }
+  .popular-text p{
+      margin: 16px auto;
+  }
+  .popular-text ul li{
+      margin: 12px auto;
+  }
+  .popular-text p,
+  .popular-text ul li {
+    color: rgba(19, 19, 24, 0.7);
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 24px; /* 162.5% */
+  }
+  .popular-text button{
+    margin-bottom: 24px;
+  }
+  .popular-text{
+    width: 100%;
+    margin: 0px auto;
   }
 }
